PermSize, MaxPermSize
OpenJDK 64-Bit Server VM warning: ignoring option PermSize=512m; support was removed in 8.0
OpenJDK 64-Bit Server VM warning: ignoring option MaxPermSize=512m; support was removed in 8.0